grammar.js
    script: $ => repeat(choice(
      $.func_decl,
      $.class_decl,
      $.state_decl,
      $.struct_decl,
      $.enum_decl,
      $.member_var_decl, // needed for @addField annotation
      $.nop
    )),
    
    
    // STATEMENTS ===================================================

    
    // ENUM DECLARATION ====================

    enum_decl: $ => seq(
      $._enum_decl_intro,
      field('definition', $.enum_def)
    ),

    // TS seems to be doing error recovery best when it can work within shorter sequences.
    // Specifically at the end of those sequences, at the last or second-last terminal.
    // Making hidden rules as a part of a bigger rule can then improve it.
    // So when possible chop rules up into smaller bits that are 2-3 tokens long.
    // Grammar file will look a little uglier, but it will be for the greater benefit of the parser.
    // This can be done reliably only when a rule contains distinguishable keywords/punctuation.
    _enum_decl_intro: $ => seq(
      'enum', field('name', $.ident),
    ),

    enum_def: $ => block_delim(
      $.enum_member_decl, ','
    ),

    struct_decl: $ => seq(
      field('specifiers', repeat($.specifier)),
      $._struct_decl_intro,
      field('definition', $.struct_def)
    ),

    _struct_decl_intro: $ => seq(
      'struct', field('name', $.ident),
    ),

    struct_def: $ => block(
      $._struct_prop
    ),

    _struct_prop: $ => choice(
      $.member_var_decl,
      $.member_default_val,
      $.member_default_val_block,
      $.member_hint,
      $.nop
    ),


    // STATE DECLARATION ===================

    class_decl: $ => seq(
      field('specifiers', repeat($.specifier)),
      $._class_decl_intro,
      optional($._class_base),
      field('definition', $.class_def)
    ),

    _class_decl_intro: $ => seq(
      'class', field('name', $.ident),
    ),

    class_def: $ => block(
      $._class_prop
    ),

    _class_base: $ => seq(
      'extends', field('base', $.ident)
    ),


    // CLASS ===============================

    _class_prop: $ => choice(
      $.member_var_decl,
      $.member_default_val,
      $.member_default_val_block,
      $.member_hint,
      $.autobind_decl,
      $.func_decl,
      $.event_decl,
      $.nop
    ),

    func_decl: $ => seq(
      field('annotation', optional($.annotation)),
      field('specifiers', repeat($.specifier)),
      field('flavour', optional($.func_flavour)),
      $._func_decl_intro,
      field('params', $.func_params),
      optional(seq(
        ':',
        field('return_type', $.type_annot)
      )),
      field('definition', $._func_definition)
    ),

    _func_decl_intro: $ => seq(
      'function', field('name', $.ident),
    ),

    
    _func_definition: $ => choice(
      $.func_block,
      $.nop
    ),

    func_params: $ => seq(
      '(', comma($.func_param_group), ')'
    ), 

    _func_stmt: $ => choice(
      $.local_var_decl_stmt,
      $.for_stmt,
      $.while_stmt,
      $.do_while_stmt,
      $.if_stmt,
      $.switch_stmt,
      $.break_stmt,
      $.continue_stmt,
      $.return_stmt,
      $.delete_stmt,
      $.func_block,
      $.expr_stmt,
      $.nop
    ),

    local_var_decl_stmt: $ => seq(
      $._var_decl_intro,
      ':',
      field('var_type', $.type_annot),
      optional(seq(
        '=',
        field('init_value', $._expr)
      )),
      ';'
    ),

    _var_decl_intro: $ => seq(
      'var', field('names', comma1($.ident))
    ),


    for_stmt: $ => seq(
      'for', '(',
      field('init', optional(choice($._expr, $.sequence_expression))), ';',
      field('cond', optional($._expr)), ';',
      field('iter', optional(choice($._expr, $.sequence_expression))),
      ')',
      field('body', $._func_stmt)
    ),

    sequence_expression: $ => prec.right(comma1($._expr)),

    while_stmt: $ => seq(
      'while', '(', field('cond', $._expr), ')',
      field('body', $._func_stmt)
    ),

    do_while_stmt: $ => seq(
      'do', field('body', $._func_stmt),
      'while', '(', field('cond', $._expr), ')'
    ),


    if_stmt: $ => prec.right(seq(
      'if', '(', field('cond', $._expr), ')',
      field('body', $._func_stmt),
      optional(seq(
        'else', field('else', $._func_stmt)
      ))
    )),

    switch_stmt: $ => seq(
      'switch', '(', field('cond', $._expr), ')',
      field('body', $.switch_block),
    ),

    switch_block: $ => seq(
      '{',
      repeat($._switch_section),
      '}'
    ),

    _switch_section: $ =>choice(
      $.switch_case_label,
      $.switch_default_label,
      $._func_stmt
    ),

    switch_case_label: $ => seq(
      'case', field('value', $._expr), ':'
    ),

    switch_default_label: $ => seq(
      'default', ':',
    ),

    
    break_stmt: $ => seq(
      'break', ';'
    ),

    continue_stmt: $ => seq(
      'continue', ';'
    ),

    return_stmt: $ => seq(
      'return', optional($._expr), ';'
    ),

    delete_stmt: $ => seq(
      'delete', $._expr, ';'
    ),

    func_block: $ => prec(PREC.FUNC_BLOCK, block(
      $._func_stmt
    )),

    expr_stmt: $ => seq(
      $._expr, ';'
    ),

    
    nop: $ => ';',

    type_annot: $ => seq(
      field('type_name', $.ident),
      optional(seq(
        '<',
        field('type_arg', $.type_annot),
        '>'
      ))
    ),


  
    // EXPRESSIONS ==================================================

    _expr: $ => choice(
      $.array_init_expr,
      $.assign_op_expr,
      $.ternary_cond_expr,
      $.binary_op_expr,
      $.new_expr,
      $.unary_op_expr,
      $.cast_expr,
      $.member_access_expr,
      $.func_call_expr,
      $.array_expr,
      $.nested_expr,
      $.this_expr,
      $.super_expr,
      $.parent_expr,
      $.virtual_parent_expr,
      $.ident,
      $._literal
    ),


    assign_op_expr: $ => prec.left(PREC.ASSIGN, seq(
      field('left', $._expr),
      field('op', choice(
        $.assign_op_direct,
        $.assign_op_sum,
        $.assign_op_diff,
        $.assign_op_mult,
        $.assign_op_div,
        $.assign_op_bitand,
        $.assign_op_bitor
      )),
      field('right', $._expr)
    )),

    assign_op_direct: $ => '=',
    assign_op_sum: $ => '+=',
    assign_op_diff: $ => '-=',
    assign_op_mult: $ => '*=',
    binary_op_expr: $ => choice(
      ...[
        [$.binary_op_or, PREC.OR],
        [$.binary_op_and, PREC.AND],
        [$.binary_op_bitor, PREC.BIT_OR],
        [$.binary_op_bitand, PREC.BIT_AND],
        [$.binary_op_bitxor, PREC.BIT_XOR],
        [$.binary_op_eq, PREC.EQ],
        [$.binary_op_neq, PREC.EQ],
        [$.binary_op_gt, PREC.RELATION],
        [$.binary_op_ge, PREC.RELATION],
        [$.binary_op_lt, PREC.RELATION],
        [$.binary_op_le, PREC.RELATION],
        [$.binary_op_diff, PREC.DIFF],
        [$.binary_op_sum, PREC.SUM],
        [$.binary_op_mod, PREC.MODULO],
        [$.binary_op_div, PREC.DIV],
        [$.binary_op_mult, PREC.MULT],
      ].map(([op, precedence]) =>
        prec.left(precedence, seq(
          field('left', $._expr),
          field('op', op),
          field('right', $._expr)
        ))
      )
    ),

    // can't bring those under a single rule, because they have different precedense
    binary_op_and: $ => '&&',
    binary_op_eq: $ => '==',
    binary_op_neq: $ => '!=',
    binary_op_gt: $ => '>',
    binary_op_lt: $ => '<',
    unary_op_expr: $ => prec.right(PREC.UNARY, seq(
      field('op', choice(
        $.unary_op_neg,
        $.unary_op_not,
        $.unary_op_bitnot,
        $.unary_op_plus,
      )),
      field('right', $._expr)
    )),

    unary_op_not: $ => '!',
    member_access_expr: $ => choice(
      prec.left(PREC.MEMBER, seq(
        field('accessor', $._expr),
        '.',
        field('member', $.ident)
      )),
      // Error-recovery: dot with no following identifier. Uses a distinct node
      // name so downstream tools can identify and flag incomplete member access,
      // while still allowing tree-sitter to close enclosing blocks rather than
      // cascading to a block-level ERROR.
      $.incomplete_member_access_expr,
    ),

    func_call_expr: $ => prec.left(PREC.CALL, seq(
      field('func', $._expr),
      '(',
      field('args', optional($.func_call_args)),
      ')'
    )),

    func_call_args: $ => choice(
      $._expr,
      comma2(optional($._expr))
    ),

    array_expr: $ => prec.left(PREC.ARRAY, seq(
      field('accessor', $._expr),
      '[',
      field('index', $._expr),
      ']'
    )),


    this_expr: $ => 'this',

    parent_expr: $ => 'parent',

    virtual_parent_expr: $ => 'virtual_parent',


    literal_float: $ => {
      const digit = /[0-9]/
      return token(seq(
        optional(choice('+', '-')),
        choice(
          // normal looking float literal
          seq(
            repeat1(digit),
            '.',
            // repeat() and not repeat1(), because forms like "0." are allowed
            repeat(digit),
          ),
          // Goofy ass float without the integer part
          seq(
            '.',
            repeat1(digit),
          )
        ),
        // This optional suffix is completely pointless as there is only one floating point type in the language.
        optional('f')
      ))
    },

    literal_int: $ => token(seq(
      optional(choice('+', '-')),
      repeat1(/[0-9]/)
    )),

    literal_bool: $ => choice(
      'true',
      'false'
    ),

    literal_name: $ => token(seq(
      '\'',
      repeat(choice(
        token.immediate(prec(1, /[^']+/)),
        '\\\'',
      )),
      '\'',
    )),


    comment: $ => token(choice(
      seq('//', /(\\+(.|\r?\n)|[^\\\n])*/),
      seq(
        '/*',
        /[^*]*\*+([^/*][^*]*\*+)*/,
        '/',
      ),
    )),
  },     
});


function delim1(rule, del) {
  return seq(
    rule,
    repeat(seq(
      del,
      rule
    ))
  )
}

function delim2(rule, del) {
  return seq(
    rule,
    repeat1(seq(
      del,
      rule
    ))
  )
}

function delim(rule, del) {
  return optional(delim1(rule, del))
}

function delim_trail(rule, del) {
  return seq(
    delim(rule, del),
    optional(del)
  )
}


function comma1(rule) {
  return delim1(rule, ',')
}

function comma2(rule) {
  return delim2(rule, ',')
}
    
function comma(rule) {
  return optional(comma1(rule))
}
    
function comma_trail(rule) {
  return delim_trail(rule, del)
}


function block(rule) {
  return seq(
    '{', repeat(rule), '}'
  )
}

function block_delim(rule, del) {
  return seq(
    '{', delim_trail(rule, del), '}'
  )
}
