test/corpus/parent.txt
===================================================================================================
parent in class method
===================================================================================================

class C {
    function F() {
        parent.M();
    }
}

---------------------------------------------------------------------------------------------------

    (script
      (class_decl
        (ident)
        (class_def
          (func_decl
            (ident)
            (func_params)
            (func_block
              (expr_stmt
                (func_call_expr
                  (member_access_expr
                    (parent_expr)
                    (ident)))))))))

===================================================================================================
virtual_parent in class method
===================================================================================================

class C {
    function F() {
        virtual_parent.M();
    }
}

---------------------------------------------------------------------------------------------------

    (script
      (class_decl
        (ident)
        (class_def
          (func_decl
            (ident)
            (func_params)
            (func_block
              (expr_stmt
                (func_call_expr
                  (member_access_expr
                    (virtual_parent_expr)
                    (ident)))))))))

===================================================================================================
parent in free function
===================================================================================================

function F() {
    parent.M();
}

---------------------------------------------------------------------------------------------------

    (script
      (func_decl
        (ident)
        (func_params)
        (func_block
          (expr_stmt
            (func_call_expr
              (member_access_expr
                (parent_expr)
                (ident)))))))

===================================================================================================
parent in struct method
===================================================================================================

struct S {
    function F() {
        parent.M();
    }
}

---------------------------------------------------------------------------------------------------

    (script
      (struct_decl
        (ident)
        (struct_def
          (MISSING "}")))
      (func_decl
        (ident)
        (func_params)
        (func_block
          (expr_stmt
            (func_call_expr
              (member_access_expr
                (parent_expr)
                (ident))))))
      (ERROR))
