test/corpus/reserved.txt
===================================================================================================
Reserved function name
===================================================================================================

function optional() {
}

---------------------------------------------------------------------------------------------------

(script
  (ERROR))

===================================================================================================
Reserved variable name
===================================================================================================

function worple() {
    var return : name;
}

---------------------------------------------------------------------------------------------------

(script
  (func_decl
    name: (ident)
    params: (func_params)
    (ERROR)
    return_type: (type_annot
      type_name: (ident))
    definition: (nop))
  (ERROR))

===================================================================================================
Reserved class name
===================================================================================================

class statemachine {
}

---------------------------------------------------------------------------------------------------

(script
  (ERROR))

===================================================================================================
Reserved class member name
===================================================================================================

class horse {
    var const : name;
}

---------------------------------------------------------------------------------------------------

(script
  (class_decl
    name: (ident)
    definition: (class_def
      (ERROR
        (ERROR)
        names: (ident))
      (nop))))

===================================================================================================
Reserved enum name
===================================================================================================

enum autobind {
}

---------------------------------------------------------------------------------------------------

(script
  (ERROR))

===================================================================================================
Reserved enum member name
===================================================================================================

enum skills {
	default
}

---------------------------------------------------------------------------------------------------

(script
  (enum_decl
    name: (ident)
    definition: (enum_def
      (ERROR))))
